Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14116

gss: undefined reference to 'krb5int_enc_des3'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0, Lustre 2.12.6
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      While building Lustre client on RHEL 8.3 with krb5 1.18.2-5.el8, gss codes failed as follows:

      Making all in gss
      libtool: link: gcc -fPIC -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DLUSTRE_UTILS=1 -D_GNU_SOURCE -g -O2 -Werror -Wall -Werror -g -O2 -Werror -Wall -Werror -Wl,-z -Wl,relro -o .libs/lsvcgssd lsvcgssd-context.o lsvcgssd-context_lucid.o lsvcgssd-context_mit.o lsvcgssd-context_heimdal.o lsvcgssd-context_spkm3.o lsvcgssd-gss_util.o lsvcgssd-gss_oids.o lsvcgssd-err_util.o lsvcgssd-lsupport.o lsvcgssd-sk_utils.o lsvcgssd-cacheio.o lsvcgssd-svcgssd.o lsvcgssd-svcgssd_main_loop.o lsvcgssd-svcgssd_mech2file.o lsvcgssd-svcgssd_proc.o  ../../../lustre/utils/.libs/liblustreapi.so -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lcrypto -lssl -lm -lkeyutils
      lsvcgssd-context_lucid.o: In function `derive_key_lucid':
      /tmp/rpmbuild-lustre-root-9fwzvk4G/BUILD/lustre-2.13.56_78_g994d2ca/lustre/utils/gss/context_lucid.c:285: undefined reference to `krb5int_enc_des3'
      collect2: error: ld returned 1 exit status
      

      This is because all DES3 enctypes supports were removed from krb5 1.18.2-5.el8 on RHEL 8.3. Attached is the downstream-Remove-3des-support.patch in krb5-1.18.2-5.el8.src.rpm.

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: